--- a/will-be-there-frontend/package.json
+++ b/will-be-there-frontend/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@supabase/supabase-js": "^2.42.0",
     "autoprefixer": "^10.4.19",
-    "firebase": "^10.10.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "supabase": "^1.153.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
