--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# subdirectories node_modules
 node_modules
+**/node_modules
 dist
 dist-ssr
 *.local
