--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
