feat:google login

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,5 +5,10 @@ JWT_SECRET="secret123"
 SEAMAILER_API_KEY="sm_prod_o_kezhunpwch28cnhysmb8vz4uzlmohgzbzygqao"
 FORGOT_PASSWORD_TEMPLATE_ID=9678
 
+# Google OAuth
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CALLBACK_URL="http://localhost:5000/api/auth/google/redirect"
+
 # Frontend
 FRONTEND_BASE_URL=""
