--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,14 @@
-DATABASE_URL="postgres://uiihclqb:IdA_gpU8ZmywZTvxywAxZtyG6ka5jb5c@floppy.db.elephantsql.com/uiihclqb"
-JWT_SECRET="secret123"
+DATABASE_URL=""
+JWT_SECRET=""
 
 # EMAIL SETUP
-SEAMAILER_API_KEY="sm_prod_o_kezhunpwch28cnhysmb8vz4uzlmohgzbzygqao"
-FORGOT_PASSWORD_TEMPLATE_ID=9678
+SEAMAILER_API_KEY=""
+FORGOT_PASSWORD_TEMPLATE_ID=
 
 # Google OAuth
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_CLIENT_ID=""
-GOOGLE_CALLBACK_URL="http://localhost:5000/api/auth/google/redirect"
+GOOGLE_CALLBACK_URL=""
 
 # Frontend
-FRONTEND_BASE_URL=""
+FRONTEND_BASE_URL="http://localhost:3000"
