--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,10 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
+    "ioredis": "^5.4.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -50,6 +52,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-google-oauth20": "^2.0.14",
