--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
