--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1",
     "yup": "^1.4.0"
   },
