--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "cloudinary": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.9.0",
     "ioredis": "^5.4.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
